--- a/src/app/components/introduction/introduction.module.css
+++ b/src/app/components/introduction/introduction.module.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center; 
     text-align: center; 
-    margin-top: 1rem;
+    margin-top: 50rem;
+    margin-bottom: 5rem;
 }
 
 .containerIntroduction h2 {
@@ -27,7 +28,6 @@
     align-items: center; 
     gap: 1rem; 
     width: 30%;
-    margin-top: 1rem
 }
 
 .cardItem p {
