--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,9 @@
 .container {
   background-image: url('../../public/Main-image.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+
   height: 100vh;
 }
